src/tests/snapshots/niri__tests__window_opening__check_target_output_and_workspace@ws1-out1-wfsA2-spB1.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: A2\nset parent: B1\nconfig:\nworkspace \"ws-1\" {\n    open-on-output \"headless-1\"\n}\n\nworkspace \"ws-2\" {\n    open-on-output \"headless-2\"\n}\n\nwindow-rule {\n    exclude title=\"parent\"\n\n    open-on-workspace \"ws-1\"\n    open-on-output \"headless-1\"\n}\n\nwindow-rule {\n    match title=\"parent\"\n    open-on-output \"headless-1\"\n}"
expression: snapshot
snapshot_kind: text
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 616 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1920 × 1080, bounds: 1888 × 1048, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]
